<resources>
    <string name="app_name">Task Scheduler</string>

    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="back">Назад</string>
    <string name="statistics">Статистика</string>
    <string name="closed">Закрытые</string>

    <string name="remove_group">Удалить группу</string>
    <string name="update_group">Изменить группу</string>

    <string name="add_goal">Добавить цель</string>
    <string name="remove_goal">Удалить цель</string>
    <string name="update_goal">Изменить цель</string>

    <string name="add_task">Добавить задачу</string>
    <string name="remove_task">Удалить задачу</string>
    <string name="update_task">Изменить задачу</string>

    <string name="add_record">Добавить запись</string>
    <string name="remove_record">Удалить запись</string>
    <string name="update_record">Изменить запись</string>

    <string name="groups_activity_description">В списке находятся доступные Вам группы.
        Вы можете посмотреть каждую группу подробнее, если кликните на нее.</string>

    <string name="add_or_change_group_description">Тут вы можете создать Вашу новую группу,
        в которую потом можно добавить цели.</string>
    <string name="change_group_description">Тут вы можете изменить Вашу группу</string>
    <string name="enter_group_title">Введите название группы</string>
    <string name="enter_group_description">Введите описание группы</string>

    <string name="add_or_change_goal_description">Тут вы можете создать Вашу новую цель,
        в которую потом можно добавить задачи.</string>
    <string name="change_goal_description">Тут вы можете изменить Вашу цель.</string>

    <string name="add_or_change_task_description">Тут вы можете создать Вашу новую задачу.</string>
    <string name="change_task_description">Тут вы можете изменить Вашу задачу.</string>

    <string name="add_or_change_record_description">Тут вы можете создать запись о проделанной работе.</string>
    <string name="change_record_description">Тут вы можете изменить запись о проделанной работе.</string>

    <string name="enter_goal_title">Введите название цели</string>
    <string name="enter_goal_description">Введите описание цели</string>

    <string name="enter_task_title">Введите название задачи</string>
    <string name="enter_task_description">Введите описание задачи</string>

    <string name="enter_record_comment">Введите комментарий</string>


</resources>
