<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupsActivity"
    android:orientation="vertical"
    android:padding="15dp"
    android:weightSum="16">

    <TextView
        android:id="@+id/group_and_goal_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="79dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/goals_and_tasks_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="99dp"
        app:layoutManager="LinearLayoutManager"
        android:layout_weight="8"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="8"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="722dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/ic_check_circle_black_24dp"
            android:text="@string/closed"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

        <Space
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/ic_assessment_black_24dp"
            android:text="@string/statistics"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/ic_add_circle_black_24dp"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />
    </LinearLayout>
</LinearLayout>